# Network-Protocol

./: .gitignore  CHANGELOG.md  LICENSE  README.md  network_protocol_docs.md  pyproject.toml  requirements-dev.txt
.github/workflows/: ci.yml
Schema/: README.md  app.schema.json  errors.schema.json  frame.schema.json  messages.schema.json  state_machine.schema.json
docs/: ADRS.md  PROTOCOL_SPEC.md
scripts/: generate_frame_fixtures.py
src/toyproto/: __init__.py  __main__.py  app.py  cli.py  client.py  codec.py  constants.py  errors.py  framing.py  hexdump.py  hmac_auth.py  inspect.py  server.py  state_machine.py  transport.py  types.py
tests/: conftest.py  server_helpers.py  test_app.py  test_cli.py  test_client.py  test_codec.py  test_constants.py  test_errors.py  test_framing.py  test_hexdump.py  test_hmac_auth.py  test_init.py  test_inspector.py  test_integration.py  test_main.py  test_server.py  test_state_machine.py  test_transport.py  test_types.py
